updates to use spartan design
